--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+body{
+    margin: 0px;
+    padding: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+    padding: 0rem 1rem;
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav{
+    display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header nav .nav-element,
+header nav h4{
+    margin: auto 0.5rem;
+    list-style: none !important;
+    text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;   /* Height of the footer */
+    background:#6cf;
+    display: flex;
+    justify-content: center;
+}
+
+
+.page-title{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.page-subtitle{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
+.error{
+    color: red;
+}
+
+ul{
+    list-style: none;
+    padding: 0;
+}
+
+form{
+    padding: 0.5rem 0rem;
+    background-color: #ccc;
+    border: 1px solid gray;
+}
+
+form div{
+    display: grid;
+    width: 50%;
+    margin: 1.5rem auto;
+}
+
+form div label{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0.5rem;
+}
+
+input[type="text"], input[type="password"]{
+    height: 1.2rem;
+}
+
+form input[type="submit"]{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+.clearList{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    width: 12rem;
 }
